# jsonc2json

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  bench.py  build.bat  file.py  justfile  pyproject.toml  readme.py  requirements.dev.txt
.github/workflows/: ci.yml  dev.yml
bench/: test_bench.py
python/jsonc2json/: __about__.py  __init__.py  __main__.py  libjsonc2json.pyi
requirements/: dev.in  dev.txt
src/: lib.rs
tests/: test_jsonc2json.py
