[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "jsonc2json"
version = "0.0.2"
description = "jsonc2json ~ convert jsonc 2 json ~ python + rust"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
authors = [{ name = "Jesse Rubin", email = "jessekrubin@gmail.com" }]
maintainers = [{ name = "Jesse Rubin", email = "jessekrubin@gmail.com" }]

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]
module-name = "jsonc2json._jsonc2json"

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "python"
]
addopts = [
    "--doctest-modules",
    "-v"
]
