[build-system]
requires = ['maturin>=0.14.16,<2']
build-backend = "maturin"

[project]
name = "jsonc2json"
description = "jsonc2json ~ convert jsonc 2 json ~ python + rust"
requires-python = ">=3.8"
license = "MIT OR Apache-2.0"
keywords = ["json", "jsonc", "rust", "pyo3"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Typing :: Typed",
]
authors = [{ name = "Jesse Rubin", email = "jessekrubin@gmail.com" }]
maintainers = [{ name = "Jesse Rubin", email = "jessekrubin@gmail.com" }]
dynamic = [
    "version",
    "readme"
]

[project.urls]
documentation = "https://github.com/jessekrubin/jsonc2json"
homepage = "https://github.com/jessekrubin/jsonc2json"
source = "https://github.com/jessekrubin/jsonc2json"

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]
module-name = "jsonc2json._jsonc2json"

[tool.black]
target-version = ["py38"]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests", "python"]
addopts = ["--doctest-modules", "-v"]
